# synapse_stats_exporter

./: README.md  setup.cfg
src/synapse_stats_exporter/: exporter.py
