[metadata]
name = synapse-stats-exporter
version = 1.0.0

[options]
package_dir =
    = src
packages =
    synapse_stats_exporter
include_package_data = True
install_requires =
    requests
    prometheus_client

[options.entry_points]
console_scripts =
    synapse-stats-exporter = synapse_stats_exporter.exporter:main
